# poker_dashboard

./: .gitignore  poker_dashboard.code-workspace
back/: Dockerfile  Makefile  alembic.ini  pyproject.toml
back/src/app/dto/: account.py  auth.py  balance_change.py
back/src/app/usecase/: account.py  auth.py  balance_change.py  errors.py
back/src/domain/entity/: account.py  all.py  balance_change.py  base.py  user.py
back/src/infra/db/: account.py  balance_change.py  conn.py  user.py
back/src/infra/migrations/: env.py
back/src/infra/migrations/versions/: 202511201728_eca00f9a9181_account.py  202511201751_6d48b9e7aba4_balance_change.py  202511211849_12640102aaf8_user.py  202511241726_97612310611f_balance_diff.py  202511241904_fa97866f75da_timezones.py  202512111510_df819c4f84d6_fixed_balance_and_raw_change_state.py  202512111727_1c066e3430fd_account_is_active.py
back/src/infra/utils/: config.py  log.py
back/src/presentation/rest/: app.py  deps.py
back/src/presentation/rest/middleware/: timeout.py
back/src/presentation/rest/router/: account.py  auth.py  balance_change.py
back/src/run/: api.py
back/tests/: conftest.py  new_balance_change_test.py
front/: package-lock.json  package.json
front/src/: App.tsx  AppInitializer.tsx  index.css  main.tsx
front/src/api/: accounts.ts  auth.ts  http.ts
front/src/components/: PrivateRoute.tsx
front/src/pages/: Dashboard.css  Dashboard.tsx  LoginPage.tsx
front/src/pages/account/: Account.tsx  BalanceChart.tsx  BalanceDiffChart.tsx  ChangesTable.tsx
front/src/store/: auth.ts
(+4 files in other folders)
